# playground-solana

./: incomplete.txt  solana-test-validator commands.txt  solana_account_query.py  solana_acount_query.txt
compute-usage/: lib.rs  readme.md
cpi/: Anchor.toml  readme.md
cpi-variants/: Anchor.toml  readme.md
cpi-variants/programs/cpi-variants/: Cargo.toml
cpi-variants/tests/: cpi-variants.ts
cpi/programs/cpi/: Cargo.toml
cpi/tests/: cpi.ts
crud-dapp/: Anchor.toml  readme.md
crud-dapp/programs/crud-dapp/: Cargo.toml
crud-dapp/tests/: crud-dapp.ts
durable-nonce/: co-sender.json  durableNonces.ts  init offline tx.txt  nonce-account.json  nonce-authority.json  readme.md  receiver.json  sender.json
evm-to-svm/: readme.md
jest/: Anchor.toml  package.json
jest-bankrun/: Anchor.toml  jest.config.js  readme.md
jest/programs/jest/: Cargo.toml
jest/tests/: jest.test.ts  jest.ts
mint-burn/: Anchor.toml
mint-burn/app/src/: client.ts
mint-burn/programs/mint-burn/: Cargo.toml
mint-burn/programs/mint-burn/src/: lib.rs
mint-burn/tests/: mint-burn.ts
native-rust/: .gitignore  Cargo.toml  readme.md
native-rust/src/: lib.rs
native-rust/tests/: native.test.ts
new-token/: metadata.json  readme.md
priority-fees/: get_recent_prioritization_fees.sh  readme.md  recent_priority_fees.py  requirements.txt  set_tx_priority.ts
request-compute-budget/: lib.rs  readme.md  tests.ts
tic-tac-toe/: Anchor.toml  reamde.md
tic-tac-toe/tests/: tic-tac-toe.ts
tiny-adventure/: client.ts  lib.rs  readme.md
voting/: Anchor.toml  readme.md
(+7 files in other folders)
